<resources>
    <!-- prefrences -->
    <string name="action_settings">Settings</string>

    <!--pref colors-->
    <string name="pref_show_hex_color">Show hex color</string>
    <string name="pref_show_rgb_color">Show rgb color</string>
    <string name="pref_show_cmyk_color">Show cmyk color</string>

    <!-- Not visible for user to translate is false -->
    <string name="pref_show_hex_key" translatable="false">show_hex</string>
    <string name="pref_show_rgb_key" translatable="false">show_rgb</string>
    <string name="pref_show_cmyk_key" translatable="false">show_cmyk</string>

    <!-- Global -->
    <string name="app_name">Color Converter</string>
    <string name="error_message_color">Failed to get a result, try again.</string>
    <string name="button_text_convert_color">Start digging</string>
    <string name="button_text_insert_color">Insert color</string>
</resources>
